<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.temperatureconverterapplication.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint1"
        android:inputType="numberDecimal|numberSigned" >
    </EditText>

    <FrameLayout
        android:id="@+id/FrameLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:padding="12px" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="4px" >

            <TextView
                android:id="@+id/resultLabel"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/resultLabel"
                android:textSize="48px" >
            </TextView>

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16px"
                android:textSize="48px"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ConverttoCelcius"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            
            android:text="@string/ToCelcius"
            android:textSize="32px" >
        </Button>

        <Button
            android:id="@+id/ConverttoFahrenheit"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:text="@string/ToFahrenheit"
            android:textSize="32px" >
        </Button>
    </LinearLayout>

</LinearLayout>